[package]
name = "xilem-chess"
version = "0.5.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
tokio = "1.49.0"
winit = "0.30.12"

xilem   = { git = "https://github.com/linebender/xilem.git", rev = "5281ffb308732b00f42e0755c6095b6ae234ae16" }
xilem_core = { git = "https://github.com/linebender/xilem.git", rev = "5281ffb308732b00f42e0755c6095b6ae234ae16" }
masonry = { git = "https://github.com/linebender/xilem.git", rev = "5281ffb308732b00f42e0755c6095b6ae234ae16" }
masonry_winit = { git = "https://github.com/linebender/xilem.git", rev = "5281ffb308732b00f42e0755c6095b6ae234ae16" }

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.
lto = false
panic = "abort"

[features]
salewskiChessDebug = []

